Feature/generate circuits (#54)
* add queue and generate function to generate circuits

* fix openapi spec endpoint def

* generate circuit on request

* support post processing initial step

* enable post processing after execution

* fix get result without post processing

* update api documentation

* support float array as input parameter type

* Update test.db

* Update requirements.txt

* improve documentation

* fix open api error

* update openapi doc

* update offline docs

* fix table issues
