# app/controller/generated_circuit/generated_circuit_controller.py
@@ -1,0 +1,12 @@
+from flask_smorest import Blueprint
+
+from app.model.circuit_response import (GeneratedCircuitsResponseSchema)
+
+blp = Blueprint("Generated Circuits", __name__, description="Request a generated circuit and its properties.", )
+
+
+@blp.route("/qiskit-service/api/v1.0/generated-circuits/<id>", methods=["GET"])
+@blp.response(200, GeneratedCircuitsResponseSchema)
+def encoding(json):
+    if json:
+        return
